sandbox/output
StringCalculatorTest.java:8: error: cannot find symbol
        assertEquals(0, StringCalculator.add(input));
                                             ^
  symbol:   variable input
  location: class StringCalculatorTest
1 error
